--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "start": "cd client && npm start",
+    "dev": "cd server && npm run dev",
+    "frontend": "cd client && npm start",
+    "backend": "cd server && npm run dev",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md,html}\""
   },
   "dependencies": {
