--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - JWT_SECRET=your_jwt_secret_here
       - GOOGLE_AI_API_KEY=your_google_ai_api_key_here
       - AI_INSTRUCTIONS=Your system instructions for the AI assistant
+      - PINECONE_API_KEY=your_pinecone_api_key_here
+      - PINECONE_INDEX_NAME=your_pinecone_index_name_here
     depends_on:
       - mongo
 
