--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "store": "ts-node src/scripts/storeKnowledge.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
+    "@pinecone-database/pinecone": "^4.1.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
