--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,11 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
-    "store": "ts-node src/scripts/storeKnowledge.ts"
+    "store": "ts-node src/scripts/storeKnowledge.ts",
+    "vercel": "vercel --prod"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.2.0",
+    "@google/generative-ai": "^0.21.0",
     "@pinecone-database/pinecone": "^4.1.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
