Final: App Working

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "lumina-ai-assistant-frontend",
   "version": "1.0.0",
   "private": false,
   "author": "Son Nguyen",
