--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,8 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.29.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "remark-gfm": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
