--- a/client/package.json
+++ b/client/package.json
@@ -41,12 +41,15 @@
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.2",
+    "katex": "^0.16.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
-    "remark-gfm": "^4.0.1"
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
