--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,12 +8,11 @@
   "forwardPorts": [27017, 5000, 3000],
   "remoteEnv": {
     "PORT": "5000",
-    "MONGODB_URI": "mongodb://mongo:27017/ai-assistant",
+    "POSTGRES_URI": "postgresql://postgres:5432/ai-assistant",
     "JWT_SECRET": "your_jwt_secret_here",
     "GOOGLE_AI_API_KEY": "your_google_ai_api_key_here",
     "AI_INSTRUCTIONS": "Your system instructions for the AI assistant",
-    "PINECONE_API_KEY": "your_pinecone_api_key_here",
-    "PINECONE_INDEX_NAME": "your_pinecone_index_name_here"
+    "FAISS_INDEX_PATH": "/path/to/faiss/index"
   },
   "mounts": [
     "source=./server,target=/workspace,type=bind,consistency=cached",
