--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 PORT
-MONGODB_URI
+POSTGRES_URI
 JWT_SECRET
 GOOGLE_AI_API_KEY
 AI_INSTRUCTIONS
-PINECONE_API_KEY
-PINECONE_INDEX_NAME
+FAISS_INDEX_PATH
